--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -6,3 +6,10 @@
 }
 
 <h2>@Model.Name</h2>
+<ul>
+    <li>Membership type : @Model.MembershipType.NameOfMembershipType</li>
+    @if (Model.birthDate.HasValue)
+    {
+    <li>Birth date : @Model.birthDate.Value.ToShortDateString()</li>
+    }
+</ul>
