Added movies list and movie details + navbar fix

--- a/Views/Movies/Edit.cshtml
+++ b/Views/Movies/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.Movie
+﻿@model MovieRentals.Models.Movie
 @{
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
