Added actors controller, index and details pages for actors, links for movies and actors

--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -9,4 +9,14 @@
     <li>Genre: @Model.Genre</li>
     <li>Release date: @Model.ReleaseDate.ToShortDateString()</li>
     <li>Add date: @Model.AddDate.ToShortDateString()</li>
+    <li>Starring:
+        <ul>
+            @foreach (var a in Model.Actors)
+            {
+                <li>@Html.ActionLink(a.Name, "Details", "Actor", new { id = a.id }, null)</li>
+            }
+        </ul>
+    
+     
+    </li>
 </ul>
