--- a/Views/Shared/_NavBar.cshtml
+++ b/Views/Shared/_NavBar.cshtml
@@ -12,6 +12,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+                <li>@Html.ActionLink("Actors", "Index", "Actor")</li>
             </ul>
             
         </div>
