Customer form for editing and creating new customer

--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -19,4 +19,6 @@
             <li>@Html.ActionLink(m.Name, "Details","Movies", new { id = m.Id}, null)</li>
         }
     </ul>
+    
 </ul>
+<input type="button" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Customers", new { id = Model.ID}) + "'");" />
