--- a/Views/Customers/New.cshtml
+++ b/Views/Customers/New.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Movie_Rentals.ViewModels.NewCustomerViewModel
 @{
-    ViewBag.Title = "New";
+    ViewBag.Title = "Customer form";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
