--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -20,3 +20,4 @@
      
     </li>
 </ul>
+<input type="button" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Actor", new { id = Model.Id}) + "'");" />
