--- a/Views/Customers/New.cshtml
+++ b/Views/Customers/New.cshtml
@@ -10,14 +10,17 @@
     <div class=" form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m=>m.Customer.Name)
     </div>
     <div class=" form-group">
         @Html.LabelFor(m => m.Customer.birthDate)
         @Html.TextBoxFor(m => m.Customer.birthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.birthDate)
     </div>
     <div class=" form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "NameOfMembershipType"), "Selet membership type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
     </div>
     <div class="custom-control custom-checkbox">
         <lable>
