--- a/Views/Movies/Random.cshtml
+++ b/Views/Movies/Random.cshtml
@@ -1,17 +1,14 @@
-﻿@model WebApplication1.Models.Movie
+﻿@model Movie_Rentals.ViewModels.AddActorViewModel
 @{
     ViewBag.Title = "Random";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@{ 
-    var className = Model.Customers.Count > 5 ? "popular" : null;
-}
-<h2 class="@className">@Model.Name</h2>
+<h2>@Model.Movie.Name</h2>
 <ul>
-    <li>Genre: @Model.Genre</li>
-    <li>Release date: @Model.ReleaseDate.ToShortDateString()</li>
-    <li>Add date: @Model.AddDate.ToShortDateString()</li>
+    <li>Genre: @Model.Movie.Genre</li>
+    <li>Release date: @Model.Movie.ReleaseDate.ToShortDateString()</li>
+    <li>Add date: @Model.Movie.AddDate.ToShortDateString()</li>
     <li>
         Starring:
         <ul>
