--- a/Views/Movies/New.cshtml
+++ b/Views/Movies/New.cshtml
@@ -10,16 +10,24 @@
     <div class=" form-group">
         @Html.LabelFor(m => m.Name)
         @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Name)
     </div>
     <div class=" form-group">
         @Html.LabelFor(m => m.Genre)
         @Html.TextBoxFor(m => m.Genre, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Genre)
     </div>
     <div class=" form-group">
         @Html.LabelFor(m => m.ReleaseDate)
         @Html.TextBoxFor(m => m.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>
     <br>
     @Html.HiddenFor(m => m.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
+}
+@section scripts
+    {
+    @Scripts.Render("~/bundles/jqueryval")
 }
