--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -21,5 +21,5 @@
 
     </li>
 </ul>
-<input type="button" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Movies", new { id = Model.Movie.Id}) + "'");" />
-<input type="button" value="Add actors" onclick="@("window.location.href='" + @Url.Action("AddActors", "Movies", new { id = Model.Movie.Id}) + "'");" />
+<input type="button" class="btn btn-primary" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Movies", new { id = Model.Movie.Id}) + "'");" />
+<input type="button" class="btn btn-primary" value="Add actors" onclick="@("window.location.href='" + @Url.Action("AddActors", "Movies", new { id = Model.Movie.Id}) + "'");" />
