--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>Movies List</h2>
+<input type="button" class="btn btn-primary" value="New" onclick="@("window.location.href='" + @Url.Action("New", "Movies") + "'");" />
+<br>
+<br>
 @if (!Model.Any())
 {
     <text>There are no movies available right now.</text>
