--- a/Views/Customers/Details.cshtml
+++ b/Views/Customers/Details.cshtml
@@ -1,16 +1,16 @@
-﻿@model WebApplication1.Models.Customer
+﻿@model Movie_Rentals.ViewModels.CustomerViewModel
 
 @{
-    ViewBag.Title = Model.Name;
+    ViewBag.Title = Model.Customer.Name;
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@Model.Name</h2>
+<h2>@Model.Customer.Name</h2>
 <ul>
-    <li>Membership type : @Model.MembershipType.NameOfMembershipType</li>
-    @if (Model.birthDate.HasValue)
+    <li>Membership type : @Model.Customer.MembershipType.NameOfMembershipType</li>
+    @if (Model.Customer.birthDate.HasValue)
     {
-    <li>Birth date : @Model.birthDate.Value.ToShortDateString()</li>
+    <li>Birth date : @Model.Customer.birthDate.Value.ToShortDateString()</li>
     }
     <li>Movies rented: </li>
     <ul>
@@ -21,4 +21,4 @@
     </ul>
     
 </ul>
-<input type="button" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Customers", new { id = Model.ID}) + "'");" />
+<input type="button" value="Edit" onclick="@("window.location.href='" + @Url.Action("Edit", "Customers", new { id = Model.Customer.ID}) + "'");" />
