--- a/Views/Customers/Index.cshtml
+++ b/Views/Customers/Index.cshtml
@@ -13,11 +13,12 @@
 }
 else
 {
-    <table class="table table-bordered table-hover">
+    <table id="customers" class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>Customer</th>
                 <th>Discount Rate</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -26,8 +27,32 @@ else
                 <tr>
                     <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.ID }, null)</td>
                     <td>@customer.MembershipType.NameOfMembershipType</td>
+                    <td>
+                        <button data-customer-id="@customer.ID" class= " btn-link js-delete">Delete</button>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
 }
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#customers").on("click",".js-delete", function () {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this customer?", function(result){
+                    if (result) {
+                        $.ajax({
+                        url: "https://localhost:44316/api/customers/" + button.attr("data-customer-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    });
+                    }
+                });
+            });
+        });
+    </script>
+    }
