--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -5,32 +5,66 @@
 }
 
 <h2>Movies List</h2>
-<input type="button" class="btn btn-primary" value="New" onclick="@("window.location.href='" + @Url.Action("New", "Movies") + "'");" />
-<br>
-<br>
-@if (!Model.Any())
-{
-    <text>There are no movies available right now.</text>
-}
-else
-{
-    <table class="table table-bordered table-hover">
+
+    <table id="movies" class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>Movie</th>
                 <th>Genre</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var movie in Model)
-            {
-                <tr>
-                    <td>@Html.ActionLink(movie.Name, "Details", "Movies", new { id = movie.Id }, null)</td>
-                    <td>@movie.Genre</td>
-                </tr>
-            }
+            
         </tbody>
     </table>
+<br />
+<input type="button" class="btn btn-primary" value="New movie" onclick="@("window.location.href='" + @Url.Action("New", "Movies") + "'");" />
 
-    
+
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "https://localhost:44316/api/movies",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href = '/movies/details/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "genre"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class = 'btn-link js-delete' data-movie-id=" + data + "> Delete </button>";
+                        }
+                    }
+                ]
+            })
+
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+                bootbox.confirm("Are you sure you want to delete this movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "https://localhost:44316/api/movies/" + button.attr("data-movie-id"),
+                            method: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
 }
