Images of actors can be uploaded to server and displayed on actors

--- a/Views/Actor/Details.cshtml
+++ b/Views/Actor/Details.cshtml
@@ -5,6 +5,17 @@
 }
 
 <h2>@Model.Actor.Name</h2>
+
+@if (File.Exists(Server.MapPath("/Content/Images/" + Model.Actor.Name + ".png")))
+{
+    <img src="@Model.Actor.imgPath">;
+}
+else
+{
+    <img src="~/Content/Images/404img.png">
+}
+
+
 <ul>
     <li>Birth Date: @Model.Actor.BirthDate.ToShortDateString()</li>
     <li>Age: @Model.Actor.CalculateAge(Model.Actor.BirthDate)</li>
